feat(product-service): add full product CRUD
